testing deployment in dmz-kube

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,7 +18,7 @@ variables:
   ZIF_GENERIC_SERVICE_TAG: '${FCI_ZIF_GENERIC_SERVICE_TAG}'
   ZIF_TOOLS_RUNNER_IMAGE: '${FCI_ZIF_TOOLS_RUNNER_IMAGE}'
   ZIF_TOOLS_RUNNER_TAG: '${FCI_ZIF_TOOLS_RUNNER_TAG}'
-  DEPLOY_NAMESPACE: ziiot-dev-11
+  DEPLOY_NAMESPACE: prizm
   KANIKO_EXECUTOR_ARGUMENTS: '--build-arg NPM_SDK_DEPLOY_URL=/prizm/mr-${CI_MERGE_REQUEST_IID}/'
 
 stages:
