--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,7 +8,7 @@ variables:
   ZUI_BUILD_IMAGE_TAG: '18'
   LANGUAGE: 'typescript'
   GIT_SUBMODULE_STRATEGY: recursive
-  RUN_TESTS: 'false'
+  RUN_TESTS: 'true'
   SKIP_FRONTEND_IMAGE_TEST: 'true'
   NX_NO_CLOUD: 'true'
   ENABLE_APP_REGISTRATION: 'false'
@@ -136,7 +136,7 @@ Deploy:
         $CI_OPEN_MERGE_REQUESTS != null
   script:
     - mkdir -p $HOME/.kube
-    - cat /builds/public-group/prizm.tmp/KUBE_CONFIG | sed s/KUBE01_DEV07_TOKEN/$KUBE01_DEV07_TOKEN/g > ~/.kube/config
+    - cat /builds/public-group/prizm.tmp/NEW_KUBE_CONFIG | sed s/NEW_KUBE_TOKEN/$NEW_KUBE_TOKEN/g > ~/.kube/config
     - cat ~/.kube/config
 
     - export HELM_EXPERIMENTAL_OCI=1
@@ -167,7 +167,7 @@ Deploy:
       if [ "$DEPLOY_VERSION" = "latest" ]; then
         helm -n $DEPLOY_NAMESPACE upgrade --install $CI_PROJECT_NAME-$DEPLOY_RELEASE -f ./helm/values.$CI_PROJECT_NAME.yaml ./zif-generic-service --set image.registry=$ZIF_DOCKER_REGISTRY --set image.tag=$DEPLOY_VERSION --set image.namespace=public-group --set serviceName=$CI_PROJECT_NAME-$DEPLOY_RELEASE --set ingress.path=/ --set ingress.urlRewrite=false --set podAnnotations.randomForUpgrade="random-$((1 + RANDOM % 10))"
       else
-        helm -n $DEPLOY_NAMESPACE upgrade --install $CI_PROJECT_NAME-$DEPLOY_RELEASE -f ./helm/values.$CI_PROJECT_NAME.yaml ./zif-generic-service --set image.registry=$ZIF_DOCKER_REGISTRY --set image.tag=$DEPLOY_VERSION --set image.namespace=public-group --set serviceName=$CI_PROJECT_NAME-$DEPLOY_RELEASE --set ingress.host=$DEPLOY_VERSION.doc.prizm.site --set ingress.tls.tlsHost=$DEPLOY_VERSION.doc.prizm.site --set ingress.path=/ --set ingress.urlRewrite=false --set podAnnotations.randomForUpgrade="random-$((1 + RANDOM % 10))"
+        helm -n $DEPLOY_NAMESPACE upgrade --install $CI_PROJECT_NAME-$DEPLOY_RELEASE -f ./helm/values.$CI_PROJECT_NAME.yaml ./zif-generic-service --set image.registry=$ZIF_DOCKER_REGISTRY --set image.tag=$DEPLOY_VERSION --set image.namespace=public-group --set serviceName=$CI_PROJECT_NAME-$DEPLOY_RELEASE --set ingress.host=dmz.doc.prizm.site --set ingress.tls.tlsHost=dmz.doc.prizm.site --set ingress.path=/ --set ingress.urlRewrite=false --set podAnnotations.randomForUpgrade="random-$((1 + RANDOM % 10))"
       fi
   needs:
     - Build js image
