--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -132,6 +132,7 @@ Deploy:
   script:
     - mkdir -p $HOME/.kube
     - echo "$NEW_KUBE_CONFIG" | sed s/NEW_KUBE_TOKEN/$NEW_KUBE_TOKEN/g > ~/.kube/config
+    - chmod 600 ~/.kube/config
     - cat ~/.kube/config
 
     - export HELM_EXPERIMENTAL_OCI=1
@@ -144,13 +145,13 @@ Deploy:
         DEPLOY_RELEASE="latest"
         DEPLOY_VERSION="latest"
       elif [ -n "$CI_COMMIT_TAG" ]; then
-        DEPLOY_NOSLASH=$(echo "$CI_COMMIT_TAG" | tr -s / - )
+        DEPLOY_NOSLASH=$(echo "$CI_COMMIT_TAG" | tr -s / - )0
         DEPLOY_SANITIZED="${DEPLOY_NOSLASH//[^a-zA-Z0-9\-\.]/}"
         DEPLOY_RELEASE="${DEPLOY_SANITIZED//\./}"
         DEPLOY_VERSION="$DEPLOY_SANITIZED"
       else
-        DEPLOY_RELEASE="mr-$CI_MERGE_REQUEST_IID"
-        DEPLOY_VERSION="MR-$CI_MERGE_REQUEST_IID"
+        DEPLOY_RELEASE="test-deploy-release"
+        DEPLOY_VERSION="TEST-DEPLOY-RELEASE"
       fi
 
       echo "DEPLOY_RELEASE - ${DEPLOY_RELEASE}"
