--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -130,15 +130,12 @@ Deploy:
     - if: '$RUN_DEPLOY == "true"'
       when: on_success
     - when: never
-
   script:
     - mkdir -p $HOME/.kube
-    - echo "$NEW_KUBE_CONFIG" | sed s/NEW_KUBE_TOKEN/$NEW_KUBE_TOKEN/g > ~/.kube/config
+    - echo "$NEW_KUBE_CONFIG" > ~/.kube/config
     - chmod 600 ~/.kube/config
-    - cat ~/.kube/config
-  # Debug kubeconfig
+    # Вывод краткой информации о кластере
     - kubectl cluster-info
-
     - export HELM_EXPERIMENTAL_OCI=1
     - helm registry login $ZIF_HELM_REGISTRY -u $QUAY_REGISTRY_LOGIN -p $QUAY_REGISTRY_PASSWORD
     - helm chart pull $ZIF_GENERIC_SERVICE_CHART:$ZIF_GENERIC_SERVICE_TAG
@@ -149,7 +146,7 @@ Deploy:
         DEPLOY_RELEASE="latest"
         DEPLOY_VERSION="latest"
       elif [ -n "$CI_COMMIT_TAG" ]; then
-        DEPLOY_NOSLASH=$(echo "$CI_COMMIT_TAG" | tr -s / - )0
+        DEPLOY_NOSLASH=$(echo "$CI_COMMIT_TAG" | tr -s / -)
         DEPLOY_SANITIZED="${DEPLOY_NOSLASH//[^a-zA-Z0-9\-\.]/}"
         DEPLOY_RELEASE="${DEPLOY_SANITIZED//\./}"
         DEPLOY_VERSION="$DEPLOY_SANITIZED"
@@ -157,17 +154,30 @@ Deploy:
         DEPLOY_RELEASE="test-deploy-release"
         DEPLOY_VERSION="TEST-DEPLOY-RELEASE"
       fi
-
-      echo "DEPLOY_RELEASE - ${DEPLOY_RELEASE}"
-      echo "DEPLOY_VERSION - ${DEPLOY_VERSION}"
-
-
-      # if latest - ingress path: / pathType: Prefix
-      # else      - ingress path: /$CI_PROJECT_NAME/$DEPLOY_VERSION pathType: Exact
+      echo "DEPLOY_RELEASE: ${DEPLOY_RELEASE}"
+      echo "DEPLOY_VERSION: ${DEPLOY_VERSION}"
       if [ "$DEPLOY_VERSION" = "latest" ]; then
-        helm -n $DEPLOY_NAMESPACE upgrade --install $CI_PROJECT_NAME-$DEPLOY_RELEASE -f ./helm/values.$CI_PROJECT_NAME.yaml ./zif-generic-service --set image.registry=$ZIF_DOCKER_REGISTRY --set image.tag=$DEPLOY_VERSION --set image.namespace=public-group --set serviceName=$CI_PROJECT_NAME-$DEPLOY_RELEASE --set ingress.path=/ --set ingress.urlRewrite=false --set podAnnotations.randomForUpgrade="random-$((1 + RANDOM % 10))"
+        helm -n $DEPLOY_NAMESPACE upgrade --install $CI_PROJECT_NAME-$DEPLOY_RELEASE \
+          -f ./helm/values.$CI_PROJECT_NAME.yaml ./zif-generic-service \
+          --set image.registry=$ZIF_DOCKER_REGISTRY \
+          --set image.tag=$DEPLOY_VERSION \
+          --set image.namespace=public-group \
+          --set serviceName=$CI_PROJECT_NAME-$DEPLOY_RELEASE \
+          --set ingress.path=/ \
+          --set ingress.urlRewrite=false \
+          --set podAnnotations.randomForUpgrade="random-$((1 + RANDOM % 10))"
       else
-        helm -n $DEPLOY_NAMESPACE upgrade --install $CI_PROJECT_NAME-$DEPLOY_RELEASE -f ./helm/values.$CI_PROJECT_NAME.yaml ./zif-generic-service --set image.registry=$ZIF_DOCKER_REGISTRY --set image.tag=$DEPLOY_VERSION --set image.namespace=public-group --set serviceName=$CI_PROJECT_NAME-$DEPLOY_RELEASE --set ingress.host=dmz.doc.prizm.site --set ingress.tls.tlsHost=dmz.doc.prizm.site --set ingress.path=/ --set ingress.urlRewrite=false --set podAnnotations.randomForUpgrade="random-$((1 + RANDOM % 10))"
+        helm -n $DEPLOY_NAMESPACE upgrade --install $CI_PROJECT_NAME-$DEPLOY_RELEASE \
+          -f ./helm/values.$CI_PROJECT_NAME.yaml ./zif-generic-service \
+          --set image.registry=$ZIF_DOCKER_REGISTRY \
+          --set image.tag=$DEPLOY_VERSION \
+          --set image.namespace=public-group \
+          --set serviceName=$CI_PROJECT_NAME-$DEPLOY_RELEASE \
+          --set ingress.host=dmz.doc.prizm.site \
+          --set ingress.tls.tlsHost=dmz.doc.prizm.site \
+          --set ingress.path=/ \
+          --set ingress.urlRewrite=false \
+          --set podAnnotations.randomForUpgrade="random-$((1 + RANDOM % 10))"
       fi
   needs:
     - Build js image
