--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "clipboard": "^2.0.11",
     "date-fns": "^2.26.0",
     "dompurify": "^2.3.8",
+    "eventsource-polyfill": "^0.9.6",
     "highlight.js": "^11.5.1",
     "highlightjs-line-numbers.js": "^2.8.0",
     "marked": "^9.0.0",
@@ -79,6 +80,7 @@
     "ngx-mask": "17.0.4",
     "oslllo-svg-fixer": "^3.0.0",
     "rxjs": "7.8.1",
+    "sse.js": "^2.6.0",
     "tar-stream": "~2.2.0",
     "ts-morph": "^18.0.0",
     "tslib": "^2.3.0",
