--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,7 +18,7 @@ variables:
   ZIF_GENERIC_SERVICE_TAG: '${FCI_ZIF_GENERIC_SERVICE_TAG}'
   ZIF_TOOLS_RUNNER_IMAGE: '${FCI_ZIF_TOOLS_RUNNER_IMAGE}'
   ZIF_TOOLS_RUNNER_TAG: '${FCI_ZIF_TOOLS_RUNNER_TAG}'
-  DEPLOY_NAMESPACE: ziiot-dev-11
+  DEPLOY_NAMESPACE: prizm
   KANIKO_EXECUTOR_ARGUMENTS: '--build-arg NPM_SDK_DEPLOY_URL=/prizm/mr-${CI_MERGE_REQUEST_IID}/'
 
 stages:
@@ -78,17 +78,8 @@ Build js image:
 
 Build library:
   stage: build
-  # // include after k8s stable work
-  # cache:
-  #   paths:
-  #     - node_modules
-  #     - /cache/Cypress
-  #     - node_modules/.cache/nx
   image: $ZUI_BUILD_IMAGE_NAME:$ZUI_BUILD_IMAGE_TAG
   script:
-    # - cat ${NPMRC_CONFIG} > .npmrc
-    # - echo "_auth=$NPM_AUTH_TOKEN" >> .npmrc
-    # - cp .npmrc ~/
     - export NODE_OPTIONS="--max_old_space_size=8192"
     - npm install
     - npm run build:all
@@ -97,6 +88,12 @@ Build library:
     paths:
       - dist/
   extends: ['.tags_k8s', '.except_skip_ci']
+  cache:
+    key: ${CI_COMMIT_REF_SLUG}
+    paths:
+      - node_modules/
+      - .cache/
+
 
 #Release package:
 #  stage: release
@@ -121,6 +118,8 @@ Build library:
 #
 Deploy:
   stage: deploy
+  tags:
+    - dmz
   image:
     name: $ZIF_TOOLS_RUNNER_IMAGE:$ZIF_TOOLS_RUNNER_TAG
     entrypoint: ['']
@@ -136,9 +135,9 @@ Deploy:
         $CI_OPEN_MERGE_REQUESTS != null
   script:
     - mkdir -p $HOME/.kube
-    - cat /builds/public-group/prizm.tmp/KUBE_CONFIG | sed s/KUBE01_DEV07_TOKEN/$KUBE01_DEV07_TOKEN/g > ~/.kube/config
-    - cat ~/.kube/config
-
+    - cat "$KUBE_CONFIG" > ~/.kube/config
+    - chmod 600 ~/.kube/config
+    - helm -n $DEPLOY_NAMESPACE list
     - export HELM_EXPERIMENTAL_OCI=1
     - helm registry login $ZIF_HELM_REGISTRY -u $QUAY_REGISTRY_LOGIN -p $QUAY_REGISTRY_PASSWORD
     - helm chart pull $ZIF_GENERIC_SERVICE_CHART:$ZIF_GENERIC_SERVICE_TAG
@@ -149,26 +148,39 @@ Deploy:
         DEPLOY_RELEASE="latest"
         DEPLOY_VERSION="latest"
       elif [ -n "$CI_COMMIT_TAG" ]; then
-        DEPLOY_NOSLASH=$(echo "$CI_COMMIT_TAG" | tr -s / - )
+        DEPLOY_NOSLASH=$(echo "$CI_COMMIT_TAG" | tr -s / -)
         DEPLOY_SANITIZED="${DEPLOY_NOSLASH//[^a-zA-Z0-9\-\.]/}"
         DEPLOY_RELEASE="${DEPLOY_SANITIZED//\./}"
         DEPLOY_VERSION="$DEPLOY_SANITIZED"
       else
         DEPLOY_RELEASE="mr-$CI_MERGE_REQUEST_IID"
         DEPLOY_VERSION="MR-$CI_MERGE_REQUEST_IID"
+
       fi
-
-      echo "DEPLOY_RELEASE - ${DEPLOY_RELEASE}"
-      echo "DEPLOY_VERSION - ${DEPLOY_VERSION}"
-
-
-      # if latest - ingress path: / pathType: Prefix
-      # else      - ingress path: /$CI_PROJECT_NAME/$DEPLOY_VERSION pathType: Exact
+      echo "DEPLOY_RELEASE: ${DEPLOY_RELEASE}"
+      echo "DEPLOY_VERSION: ${DEPLOY_VERSION}"
       if [ "$DEPLOY_VERSION" = "latest" ]; then
-        helm -n $DEPLOY_NAMESPACE upgrade --install $CI_PROJECT_NAME-$DEPLOY_RELEASE -f ./helm/values.$CI_PROJECT_NAME.yaml ./zif-generic-service --set image.registry=$ZIF_DOCKER_REGISTRY --set image.tag=$DEPLOY_VERSION --set image.namespace=public-group --set serviceName=$CI_PROJECT_NAME-$DEPLOY_RELEASE --set ingress.path=/ --set ingress.urlRewrite=false --set podAnnotations.randomForUpgrade="random-$((1 + RANDOM % 10))"
+        helm -n $DEPLOY_NAMESPACE upgrade --install $CI_PROJECT_NAME-$DEPLOY_RELEASE \
+          -f ./helm/values.$CI_PROJECT_NAME.yaml ./zif-generic-service \
+          --set image.registry=$ZIF_DOCKER_REGISTRY \
+          --set image.tag=$DEPLOY_VERSION \
+          --set image.namespace=public-group \
+          --set serviceName=$CI_PROJECT_NAME-$DEPLOY_RELEASE \
+          --set ingress.path=/ \
+          --set ingress.urlRewrite=false \
+          --set podAnnotations.randomForUpgrade="random-$((1 + RANDOM % 10))"
       else
-        helm -n $DEPLOY_NAMESPACE upgrade --install $CI_PROJECT_NAME-$DEPLOY_RELEASE -f ./helm/values.$CI_PROJECT_NAME.yaml ./zif-generic-service --set image.registry=$ZIF_DOCKER_REGISTRY --set image.tag=$DEPLOY_VERSION --set image.namespace=public-group --set serviceName=$CI_PROJECT_NAME-$DEPLOY_RELEASE --set ingress.host=$DEPLOY_VERSION.doc.prizm.site --set ingress.tls.tlsHost=$DEPLOY_VERSION.doc.prizm.site --set ingress.path=/ --set ingress.urlRewrite=false --set podAnnotations.randomForUpgrade="random-$((1 + RANDOM % 10))"
+        helm -n $DEPLOY_NAMESPACE upgrade --install $CI_PROJECT_NAME-$DEPLOY_RELEASE \
+          -f ./helm/values.$CI_PROJECT_NAME.yaml ./zif-generic-service \
+          --set image.registry=$ZIF_DOCKER_REGISTRY \
+          --set image.tag=$DEPLOY_VERSION \
+          --set image.namespace=public-group \
+          --set serviceName=$CI_PROJECT_NAME-$DEPLOY_RELEASE \
+          --set ingress.host=mr-prizm.dmz.private.ziiot.ru \
+          --set ingress.tls.tlsHost=mr-prizm.dmz.private.ziiot.ru \
+          --set ingress.path=/ \
+          --set ingress.urlRewrite=false \
+          --set podAnnotations.randomForUpgrade="random-$((1 + RANDOM % 10))"
       fi
   needs:
     - Build js image
-  extends: ['.tags_k8s']
