--- a/package.json
+++ b/package.json
@@ -158,6 +158,7 @@
     "ng-morph": "^2.1.3",
     "ng-packagr": "18.1.0",
     "nx": "19.5.6",
+    "p-queue": "^8.1.0",
     "postcss": "^8.4.5",
     "postcss-import": "14.1.0",
     "postcss-preset-env": "7.5.0",
@@ -172,6 +173,7 @@
     "ts-node": "10.9.1",
     "tslib": "^2.3.0",
     "typescript": "5.5.4",
+    "unirest": "^0.6.0",
     "webpack-bundle-analyzer": "^4.10.1"
   },
   "volta": {
