fix(chore): change firebase tools version #000

--- a/.github/workflows/deploy-main-doc-ng18.yml
+++ b/.github/workflows/deploy-main-doc-ng18.yml
@@ -96,7 +96,7 @@ jobs:
         with:
           repoToken: '${{ secrets.GITHUB_TOKEN }}'
           firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_PRIZMUI }}'
-          firebaseToolsVersion: '13.35.1'
+          firebaseCliVersion: '13.35.1'
           projectId: prizmui
           channelId: live
           target: main
